--- a/main.html
+++ b/main.html
@@ -3,11 +3,14 @@
 <html>
 
 <head>
+	<title>Time and Space Complexity</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Understanding Time, Space, and Complexity</h1>
+	<p>Time complexity is a measure of the amount of time an algorithm takes to complete as a function of the input size. Analyzing time complexity helps in designing efficient algorithms that perform well for large inputs.</p>
+	<p><b>Space Complexity</b> refers to the amount of memory an algorithm uses relative to its input size. It is often expressed in terms of O(n), where n represents the size of the input data.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
